# geoip2gcs

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  geoupdate.py  products.json  pyproject.toml  requirements.txt
geoip2gcs/: classes.py  config.py  logging.py  main.py
