[tool.poetry]
name = "geoip2gcs"
version = "0.1.0"
description = ""
authors = ["André Honeiser <ahoneiser@mozilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
google-cloud-storage = "^2.16.0"
functions-framework = "^3.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
